# QtBasicUtils

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DllDefines.h.in  QtBasicUtilsConfig.cmake.in  QtBasicUtilsConfig.h.in  vcpkg.json
Development/Experimental/: CMakeLists.txt
Development/Experimental/Include/: xrvariant.h
Development/Experimental/src/: PropertyCollection.cxx  main.cxx  xrbase64.cpp
Libraries/src/qbuCmdLine/: CMakeLists.txt  qbuCmdLinePCH.h
Libraries/src/qbuCmdLine/src/: QCmd.cxx  QCmdArg.cxx  QCmdArgBool.cxx  QCmdArgFileList.cxx  QCmdArgQChar.cxx  QCmdArgQString.cxx  QCmdArgQStringList.cxx  QCmdHelp.cxx  QCmdHelpException.cxx  QCmdLine.cxx  QCmdLineFileList.cxx  QCmdOpt.cxx  QCmdOptBool.cxx  QCmdOptQChar.cxx  QCmdOptQString.cxx  QCmdOptQStringList.cxx  QCmdParseError.cxx  QCmdParseException.cxx  QCmdPart.cxx  QNamedCmdPart.cxx  qbuCmdWaitForAnyKey.cxx
Testing/: CMakeLists.txt  UnitTests.cmake
Testing/Include/: cmdTestFloatOpts.h  duParamCollection.h  duParameter.h  duParameterBase.h  testCommandLineInclude.h  testDBCaseStatement.h  testDBExpression.h  testPropertyMemoryBug.h  testSetVariable.h  testUserProps.h  testxml.h  testxmlimp.h  testxmlperf.h
Testing/src/: basic.cxx  cmdTestFloatOpts.cxx  duParamCollection.cxx  duParameter.cxx  duParameterBase.cxx  testCommandLineInclude.cxx  testDBCaseStatement.cxx  testDBExpression.cxx  testPropertyMemoryBug.cxx  testSetVariable.cxx  testUserProps.cxx  testxml.cxx  testxmlimp.cxx  testxmlperf.cxx
tags/BeforeLibraryIncludeReorganization/: CMakeLists.txt  QtBasicUtilsUSE.cmake.in
tags/BeforeLibraryIncludeReorganization/CMake/: GenerateConfigureScript.cmake  GetRuntime.cmake  HelperMacros.cmake  SelectDefaultConfigurations.cmake  SubversionVersionInfo.cmake
tags/BeforeLibraryIncludeReorganization/Experimental/Include/: PropertyCollection.h
tags/BeforeLibraryIncludeReorganization/Experimental/src/: main.cxx  xrbase64.cpp
tags/BeforeLibraryIncludeReorganization/Include/: NonThreadSafeSingleton.h  PropertyList.h  QCmdArgBool.h  QCmdArgQStringList.h  QCmdOpt.h  QCmdOptQString.h  QCmdParseError.h  QCmdParseException.h  QUpdateTracker.h  UserPropery.h
tags/BeforeLibraryIncludeReorganization/Libraries/qbuDataBase/: CMakeLists.txt
tags/BeforeLibraryIncludeReorganization/Testing/Include/: testxml.h
tags/BeforeLibraryIncludeReorganization/Testing/src/: basic.cxx  cmdTestFloatOpts.cxx  testCommandLineInclude.cxx  testSetVariable.cxx  testxml.cxx
tags/BeforeLibraryIncludeReorganization/src/: PropXMLHelper.cxx  ProperyMapXMLHelper.cxx  QCmdArgBool.cxx  QCmdArgQString.cxx  QCmdHelpException.cxx  QCmdLineFileList.cxx  QCmdOpt.cxx  QCmdOptQStringList.cxx  QCmdParseError.cxx  QNamedCmdPart.cxx
trunk/: CMakeLists.txt  DllDefines.h.in  QtBasicUtilsConfig.cmake.in  QtBasicUtilsConfig.h.in  QtBasicUtilsUSE.cmake.in  QtBasicUtilsUse.cmake  QxOrm.USE.cmake  configure.bat.in  install.bat.in  update.bat.in
trunk/CMake/: DisableBufferSecurityCheck.cmake  DisableMSVCWarn.cmake  GenerateConfigureScript.cmake  GenerateInstallScript.cmake  GenerateUpdateScript.cmake  GetCompilerVersion.cmake  GetQtRuntime.cmake  GetRuntime.cmake  HelperMacros.cmake  MSVC64BitPortability.cmake  MSVCPCHSupport.cmake  NamingConvention.cmake  SelectDefaultConfigurations.cmake  SetCompilerOptions.cmake  SetReleaseConfiguration.cmake  SetupDefaultInstallPath.cmake  SubversionVersionInfo.cmake  SupportRunJobs.cmake  UnoptimizedRelWithDebInfo.cmake  doxygen.cmake
trunk/Development/: CMakeLists.txt
trunk/Development/GUI/: CMakeLists.txt
trunk/Development/GUI/qbuGUIDev0/: CMakeLists.txt
trunk/Development/GUI/qbuGUIDev2/: CMakeLists.txt
trunk/Experimental/: CMakeLists.txt
trunk/Experimental/include/: PropertyCollection.h  xrvariant.h
trunk/Experimental/src/: PropertyCollection.cxx  main.cxx  xrvariant.cpp
trunk/Include/: Property.h  PropertyList.h  PropertyMap.h  QCmdArgQChar.h  QCmdArgQString.h  QCmdHelpException.h  QCmdLine.h  QCmdLineFileList.h  QCmdOptBasic.h  QCmdOptBasic.txx  QCmdOptBasicBase.txx  QCmdOptBasicBaseMM.h  QCmdParseError.h  QCmdPart.h  qbuITKIndent.h
trunk/Libraries/: CMakeLists.txt
trunk/Libraries/Include/qbuBase/: NonThreadSafeSingleton.h  PropXMLHelper.h  Property.h  (+35 more)
trunk/Libraries/qbuDataBase/: CMakeLists.txt
trunk/Libraries/src/: CMakeLists.txt
trunk/Testing/: CMakeLists.txt  UnitTests.cmake
trunk/Testing/Include/: cmdTestFloatOpts.h  testCommandLineInclude.h  testDBExpression.h  testSetVariable.h  testUserProps.h  testxml.h  testxmlimp.h
trunk/Testing/include/: cmdTestFloatOpts.h  testCommandLineInclude.h  testUserProps.h  testxml.h  testxmlimp.h
trunk/Testing/src/: basic.cxx  cmdTestFloatOpts.cxx  testCommandLineInclude.cxx  testDBCaseStatement.cxx  testDBExpression.cxx  testSetVariable.cxx  testUserProps.cxx  testxml.cxx  testxmlimp.cxx  testxmlperf.cxx
trunk/doxygen/: CMakeLists.txt  doxygen.conf.in
trunk/include/: NonThreadSafeSingleton.h  PropXMLHelper.h  Property.h  PropertyList.h  PropertyMap.h  ProperyMapXMLHelper.h  QCmd.h  QCmdArg.h  QCmdArgBasic.h  QCmdArgBasic.txx  QCmdArgBasicBase.h  QCmdArgBasicBase.txx  QCmdArgBasicBaseMM.h  QCmdArgBasicBaseMM.txx  QCmdArgBool.h  QCmdArgFileList.h  QCmdArgQChar.h  QCmdArgQString.h  QCmdArgQStringList.h  QCmdExtra.h  QCmdHelp.h  QCmdHelpException.h  QCmdLine.h  QCmdLineFileList.h  QCmdOpt.h  QCmdOptBasic.h  QCmdOptBasic.txx  QCmdOptBasicBase.h  QCmdOptBasicBase.txx  QCmdOptBasicBaseMM.h  QCmdOptBasicBaseMM.txx  QCmdOptBool.h  QCmdOptQChar.h  QCmdOptQString.h  QCmdOptQStringList.h  QCmdParseError.h  QCmdParseException.h  QCmdPart.h  QLimits.h  QNamedCmdPart.h  (+3 more)
trunk/src/: PropXMLHelper.cxx  Property.cxx  PropertyList.cxx  PropertyMap.cxx  QCmd.cxx  QCmdArg.cxx  QCmdArgBool.cxx  QCmdArgFileList.cxx  QCmdArgQChar.cxx  QCmdArgQString.cxx  QCmdArgQStringList.cxx  QCmdHelp.cxx  QCmdHelpException.cxx  QCmdLine.cxx  QCmdLineFileList.cxx  QCmdOpt.cxx  QCmdOptBool.cxx  QCmdOptQChar.cxx  QCmdOptQString.cxx  QCmdOptQStringList.cxx  QCmdParseError.cxx  QCmdParseException.cxx  QCmdPart.cxx  QNamedCmdPart.cxx  UserPropPtr.cxx  UserProperty.cxx
(+550 files in other folders)
